[package]
name = "mill-valley-sausalito-bikepath-flood-alert"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.54", features = ["derive"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
lettre = { version = "0.11.19", features = ["tokio1-native-tls", "hostname", "builder"] }
noaa-tides = "0.0.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
